--- a/public/index.html
+++ b/public/index.html
@@ -89,6 +89,16 @@
           loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
         }
       });
+
+      // added service worker manually for app download on mobile
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/sw.js')
+            .then(reg => console.log('Service worker registered:', reg))
+            .catch(err => console.log('Service worker registration failed:', err));
+        });
+      }
+
     </script>
   </body>
 </html>
